--- a/01.javaScript-drum-klit/css/main.css
+++ b/01.javaScript-drum-klit/css/main.css
@@ -1,3 +1,78 @@
+html {
+  font-size: 16px;
+}
+
 body {
+  display: flex;
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
+  padding: 0 1rem;
+  font-family: sans-serif;
+  background: url('https://i.imgur.com/b9r5sEL.jpg') no-repeat center center;
+  background-size: cover;
+}
+
+.keys {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.key {
+  display: flex;
+  flex: 0 0 6rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 6rem;
+  padding: 0.5rem 0.25rem;
+  color: white;
+  text-shadow: 0 0 0.25rem black;
+  background: rgba(0, 0, 0, 0.4);
+  border: 0.25rem solid black;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: all 0.1s ease;
+  user-select: none;
+  will-change: border-color, box-shadow, transform;
+}
+
+.key.playing {
+  border-color: #ffc600;
+  box-shadow: 0 0 0.75rem #ffc600;
+  transform: scale(1.1);
+}
+
+.key + .key {
+  margin-left: 1rem;
+}
+
+.key > kbd {
+  font-size: 2.5rem;
+}
+
+.key > .sound {
+  color: #ffc600;
+  font-size: 0.75rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 50rem) {
+  .keys {
+    flex-wrap: wrap;
+  }
+
+  .key {
+    flex: 0 0 calc(33.33% - 1.67rem);
+    width: calc(33.33% - 1.67rem);
+  }
+
+  .key:nth-child(3n + 1) {
+    margin-left: 0;
+  }
 }
