Complete CSS + JS Clock chanllege

--- a/02.css-js-clock/css/main.css
+++ b/02.css-js-clock/css/main.css
@@ -1,3 +1,79 @@
+html {
+  font-size: 16px;
+}
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
+  background:
+    #018ded url('https://unsplash.it/1500/1000?image=881&blur=50')
+    no-repeat center center;
+  background-size: cover;
+}
+
+.clock {
+  width: 18.75rem;
+  height: 18.75rem;
+  padding: 1.25rem;
+  border: 1.25rem solid white;
+  border-radius: 50%;
+  box-shadow:
+    0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
+    inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.clock-face {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.clock-face::after {
+  position: absolute;
+  top: calc(50% - 10px);
+  right: calc(50% - 10px);
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  background-color: #018ded;
+  border: 2px solid white;
+  border-radius: 50%;
+  content: '';
+}
+
+.hand {
+  position: absolute;
+  background: black;
+  transform-origin: center bottom;
+  will-change: transform;
+}
+
+.hand.hour-hand {
+  bottom: 50%;
+  left: calc(50% - 3px);
+  width: 6px;
+  height: 30%;
+  border-radius: 3px;
+}
+
+.hand.min-hand {
+  bottom: 50%;
+  left: calc(50% - 2px);
+  width: 4px;
+  height: 40%;
+  border-radius: 2px;
+  opacity: 0.8;
+}
+
+.hand.second-hand {
+  bottom: 50%;
+  left: calc(50% - 1px);
+  width: 2px;
+  height: 50%;
+  border-radius: 1px;
+  opacity: 0.6;
 }
